test/analyzer/input_programs/invalid_programs/program18.tea
## valid since parameters can have same name
   as global variables ##

x := 5
validFunc := (x, y) ->
  out(x * y + 9)
end

## invalid since functions cannot have
   duplicate parameters ##

invalidFunc := (a, b, a) ->
  a - b - 15
end